Add a stage to static analysis to check cmake rules
Add a small script to the static analysis stage of the CI to check that CMake rules are respected. Specifically it checks if `DISCOVERY_MODE PRE_TEST` is set (without this compilation breaks on Adastra). Missing `DISCOVERY_MODE PRE_TEST` are added. Fixes #384

See merge request gysela-developpers/gyselalibxx!742

--------------------------------------------

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -145,3 +145,14 @@ cppcheck_static_analysis:
     python3 ci_tools/gyselalib_static_analysis.py ${CHANGED_FILES}
   allow_failure:
     exit_codes: [1, 2] # Allow failure due to style or error but not fatal
+
+cmake_static_analysis:
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+  stage: static_analysis
+  needs: [ setup_env_mr ]
+  image: ghcr.io/gyselax/gyselalibxx_env
+  variables:
+    GIT_SUBMODULE_STRATEGY: recursive
+  script: |
+    python3 ci_tools/cmake_checker.py
