--- a/simulations/geometryTokamAxi/testcollisions/CMakeLists.txt
+++ b/simulations/geometryTokamAxi/testcollisions/CMakeLists.txt
@@ -4,12 +4,15 @@ add_executable(test_collTokamAxi test_collTokamAxi.cpp)
 target_link_libraries(test_collTokamAxi PUBLIC
   DDC::DDC
   DDC::PDI_Wrapper
+  gslx::advection
   gslx::geometry_tokamaxi
+  gslx::interpolation
   gslx::io
   gslx::mpi_parallelisation
   gslx::paraconfpp
   gslx::quadrature
   gslx::speciesinfo
+  gslx::timestepper
   gslx::utils
 
   PDI::pdi
