Add explicit timesteppers on multipatch objects
Adapt the existing explicit timesteppers to handle multipatch objects.
Fixes #367

See merge request gysela-developpers/gyselalibxx!732

--------------------------------------------

--- a/src/multipatch/data_types/CMakeLists.txt
+++ b/src/multipatch/data_types/CMakeLists.txt
@@ -6,7 +6,8 @@ target_include_directories("multipatch_data_types"
 )
 target_link_libraries("multipatch_data_types" INTERFACE
     DDC::DDC
-    gslx::utils
 
+    gslx::data_types
+    gslx::utils
 )
 add_library("gslx::multipatch_data_types" ALIAS "multipatch_data_types")
