--- a/tests/timestepper/CMakeLists.txt
+++ b/tests/timestepper/CMakeLists.txt
@@ -4,13 +4,14 @@
 include(GoogleTest)
 
 add_executable(unit_tests_timestepper
-	euler_1d.cpp
-	crank_nicolson_1d.cpp
+    euler_1d.cpp
+    crank_nicolson_1d.cpp
     runge_kutta_1d.cpp
     runge_kutta_2d.cpp
     runge_kutta_2d_mixed.cpp
     euler_2d_mixed.cpp
     crank_nicolson_2d_mixed.cpp
+    timestepper_multipatch.cpp
     ../main.cpp
 )
 target_link_libraries(unit_tests_timestepper
@@ -19,6 +20,8 @@ target_link_libraries(unit_tests_timestepper
         GTest::gtest
         GTest::gmock
         paraconf::paraconf
+        gslx::multipatch_data_types
+        gslx::multipatch_geometries
         gslx::timestepper
         gslx::utils
 )
