--- a/simulations/CMakeLists.txt
+++ b/simulations/CMakeLists.txt
@@ -1,5 +1,6 @@
 # SPDX-License-Identifier: MIT
 
+add_subdirectory(geometry5D)
 add_subdirectory(geometryRTheta)
 add_subdirectory(geometryTokamAxi)
 add_subdirectory(geometryVparMu)
