Add Crank-Nicolson timestepper on multipatch objects
Add 2 functions `norm_inf` and `error_norm_inf` to calculate the infinite norm of a function and the infinite norm of the error between two functions. Versions of these functions are added to handle:
- doubles
- Coordinates
- Fields
- VectorFields
- MultipatchFields (of Fields or VectorFields)

By calling these functions from the Crank-Nicolson timestepper we improve this timestepper so that it can be used on multipatch objects

See merge request gysela-developpers/gyselalibxx!751

--------------------------------------------

--- a/src/timestepper/CMakeLists.txt
+++ b/src/timestepper/CMakeLists.txt
@@ -10,6 +10,7 @@ target_link_libraries(timestepper INTERFACE
     DDC::DDC
     gslx::data_types
     gslx::multipatch_data_types
+    gslx::multipatch_utils
     gslx::utils
 )
 add_library(gslx::timestepper ALIAS timestepper)
