--- a/tests/utils/CMakeLists.txt
+++ b/tests/utils/CMakeLists.txt
@@ -5,6 +5,7 @@ include(GoogleTest)
 
 add_executable(unit_tests_utils
     test_ddcHelpers.cpp
+    test_math_tools.cpp
     transpose.cpp
     ../main.cpp
 )
