--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory(geometryRTheta)
 add_subdirectory(geometryXYVxVy)
 add_subdirectory(geometryVparMu)
 add_subdirectory(interpolation)
+add_subdirectory(mapping)
 add_subdirectory(multipatch)
 add_subdirectory(advection)
 add_subdirectory(timestepper)
