--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -16,7 +16,7 @@ set(DOXYGEN_DISABLE_INDEX YES)
 set(DOXYGEN_ENUM_VALUES_PER_LINE 1)
 set(DOXYGEN_EXPAND_ONLY_PREDEF NO)
 set(DOXYGEN_EXTRACT_ALL NO)
-set(DOXYGEN_EXCLUDE_SYMBOLS "detail" "details")
+set(DOXYGEN_EXCLUDE_SYMBOLS "detail" "details" "mapping_detail")
 set(DOXYGEN_EXTRACT_LOCAL_CLASSES YES)
 set(DOXYGEN_FULL_PATH_NAMES YES)
 set(DOXYGEN_GENERATE_TREEVIEW YES)
