--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "vendor/mdspan"]
+	path = vendor/mdspan
+	url = https://github.com/kokkos/mdspan.git
 [submodule "vendor/googletest"]
 	path = vendor/googletest
 	url = https://github.com/google/googletest.git
@@ -22,4 +25,4 @@
 	url = https://github.com/CExA-project/ddc.git
 [submodule "vendor/kokkos-kernels"]
 	path = vendor/kokkos-kernels
-	url = https://github.com/yasahi-hpc/kokkos-kernels
+	url = https://github.com/yasahi-hpc/kokkos-kernels.git
