--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,6 +114,23 @@ if("${GYSELALIBXX_BUILD_BENCHMARKS}")
     endif()
 endif()
 
+## Use mdspan from `vendor/`
+set(GYSELALIBXX_mdspan_DEPENDENCY_POLICY "AUTO" CACHE STRING "Policy to find the `mdspan` package. Options: ${GYSELALIBXX_DEPENDENCY_POLICIES}")
+set_property(CACHE GYSELALIBXX_mdspan_DEPENDENCY_POLICY PROPERTY STRINGS ${GYSELALIBXX_DEPENDENCY_POLICIES})
+
+if("${GYSELALIBXX_mdspan_DEPENDENCY_POLICY}" STREQUAL "AUTO")
+  find_package(mdspan "0.3" QUIET)
+  if(NOT "${mdspan_FOUND}")
+    set(MDSPAN_CXX_STANDARD "${CMAKE_CXX_STANDARD}" CACHE STRING "Override the default CXX_STANDARD to compile with" FORCE)
+    add_subdirectory("vendor/mdspan/" "mdspan") # SYSTEM)
+  endif()
+elseif("${GYSELALIBXX_mdspan_DEPENDENCY_POLICY}" STREQUAL "EMBEDDED")
+  set(MDSPAN_CXX_STANDARD "${CMAKE_CXX_STANDARD}" CACHE STRING "Override the default CXX_STANDARD to compile with" FORCE)
+  add_subdirectory("vendor/mdspan/" "mdspan") # SYSTEM)
+elseif("${GYSELALIBXX_mdspan_DEPENDENCY_POLICY}" STREQUAL "INSTALLED")
+  find_package(mdspan "0.3" REQUIRED)
+endif()
+
 ## Use Kokkos from `vendor/`
 if("${Kokkos_ENABLE_CUDA}")
   option(Kokkos_ENABLE_CUDA_CONSTEXPR "Whether to activate experimental relaxed constexpr functions" ON)
