Correct SHA tag for docker deployment
See merge request gysela-developpers/gyselalibxx!803

--------------------------------------------

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
           cache-from: type=registry,ref=ghcr.io/gyselax/gyselalibxx_env:latest
           pull: true
           push: true
-          tags: ghcr.io/gyselax/gyselalibxx_env:${{ inputs.SHA }}
+          tags: ghcr.io/gyselax/gyselalibxx_env:${{ github.sha }}
       - name: Build and push latest
         uses: docker/build-push-action@v3
         with:
