Adding of the math_tools/ folder and renaming od utils/math_tools.hpp into math_tools/Lnorm_tools.hpp

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,9 @@
 # SPDX-License-Identifier: MIT
 
+add_subdirectory(advection)
+add_subdirectory(collisions)
 add_subdirectory(data_types)
-add_subdirectory(utils)
-add_subdirectory(speciesinfo)
 add_subdirectory(io)
-add_subdirectory(paraconfpp)
-add_subdirectory(quadrature)
 add_subdirectory(geometryXVx)
 add_subdirectory(geometryXY)
 add_subdirectory(geometryRTheta)
@@ -13,9 +11,12 @@ add_subdirectory(geometryXYVxVy)
 add_subdirectory(geometryVparMu)
 add_subdirectory(interpolation)
 add_subdirectory(mapping)
-add_subdirectory(multipatch)
-add_subdirectory(advection)
-add_subdirectory(timestepper)
-add_subdirectory(collisions)
+add_subdirectory(math_tools)
 add_subdirectory(mpi_parallelisation)
+add_subdirectory(multipatch)
+add_subdirectory(paraconfpp)
 add_subdirectory(pde_solvers)
+add_subdirectory(quadrature)
+add_subdirectory(speciesinfo)
+add_subdirectory(timestepper)
+add_subdirectory(utils)
