--- a/src/geometryRTheta/advection/CMakeLists.txt
+++ b/src/geometryRTheta/advection/CMakeLists.txt
@@ -14,6 +14,7 @@ target_link_libraries(advection_rp
         gslx::geometry_RTheta
         gslx::interpolation_2D_rp
         gslx::mapping
+        gslx::math_tools
         gslx::utils
 )
 add_library(gslx::advection_rp ALIAS advection_rp)
