--- a/src/advection/CMakeLists.txt
+++ b/src/advection/CMakeLists.txt
@@ -8,7 +8,7 @@ target_include_directories("advection"
 
 target_link_libraries("advection"
     INTERFACE
-        DDC::DDC
+        DDC::core
         sll::SLL
         gslx::interpolation
         gslx::speciesinfo
