--- a/src/geometryRTheta/interpolation/CMakeLists.txt
+++ b/src/geometryRTheta/interpolation/CMakeLists.txt
@@ -10,7 +10,7 @@ target_include_directories("interpolation_2D_rp"
 
 target_link_libraries("interpolation_2D_rp"
     INTERFACE
-        DDC::DDC
+        DDC::core
         sll::SLL
         gslx::geometry_RTheta
         gslx::utils
