--- a/src/geometryRTheta/time_solver/CMakeLists.txt
+++ b/src/geometryRTheta/time_solver/CMakeLists.txt
@@ -8,7 +8,7 @@ target_include_directories(time_integration_rp
 )
 target_link_libraries(time_integration_rp 
     INTERFACE
-        DDC::DDC
+        DDC::core
         sll::SLL
         Eigen3::Eigen
         gslx::interpolation_2D_rp
