--- a/src/geometryXY/geometry/CMakeLists.txt
+++ b/src/geometryXY/geometry/CMakeLists.txt
@@ -6,7 +6,8 @@ target_include_directories("geometry_XY"
         "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
 )
 target_link_libraries("geometry_XY" INTERFACE
-    DDC::DDC
+    DDC::core
+    DDC::splines
     gslx::utils
 )
 add_library("gslx::geometry_XY" ALIAS "geometry_XY")
