--- a/src/pde_solvers/CMakeLists.txt
+++ b/src/pde_solvers/CMakeLists.txt
@@ -8,7 +8,8 @@ target_include_directories("pde_solvers"
 
 target_link_libraries("pde_solvers"
     INTERFACE
-        DDC::DDC
+        DDC::core
+        DDC::fft
         sll::SLL
         gslx::data_types
         gslx::utils
