--- a/simulations/geometryVparMu/collisions/CMakeLists.txt
+++ b/simulations/geometryVparMu/collisions/CMakeLists.txt
@@ -3,8 +3,8 @@
 add_executable(test_collSpVparMu test_collSpVparMu.cpp)
 target_link_libraries(test_collSpVparMu
   PUBLIC
-  DDC::DDC
-  DDC::PDI_Wrapper
+  DDC::core
+  DDC::pdi
   PDI::pdi
   gslx::collisions
   gslx::geometry_vparmu
