--- a/src/geometryXVx/rhs/CMakeLists.txt
+++ b/src/geometryXVx/rhs/CMakeLists.txt
@@ -17,8 +17,8 @@ target_include_directories("rhs_${GEOMETRY_VARIANT}"
 
 target_link_libraries("rhs_${GEOMETRY_VARIANT}"
     PUBLIC
-        DDC::DDC
-        DDC::PDI_Wrapper
+        DDC::core
+        DDC::pdi
         sll::SLL
         gslx::geometry_${GEOMETRY_VARIANT}
         gslx::quadrature
