--- a/src/geometryXYVxVy/time_integration/CMakeLists.txt
+++ b/src/geometryXYVxVy/time_integration/CMakeLists.txt
@@ -10,8 +10,8 @@ target_include_directories("time_integration_xyvxvy"
 
 target_link_libraries("time_integration_xyvxvy"
     PUBLIC
-        DDC::DDC
-        DDC::PDI_Wrapper
+        DDC::core
+        DDC::pdi
         gslx::poisson_xy
         gslx::speciesinfo
         gslx::vlasov_xyvxvy
