--- a/src/multipatch/data_types/CMakeLists.txt
+++ b/src/multipatch/data_types/CMakeLists.txt
@@ -5,7 +5,7 @@ target_include_directories("multipatch_data_types"
         "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
 )
 target_link_libraries("multipatch_data_types" INTERFACE
-    DDC::DDC
+    DDC::core
 
     gslx::data_types
     gslx::utils
