--- a/tests/advection/CMakeLists.txt
+++ b/tests/advection/CMakeLists.txt
@@ -13,7 +13,7 @@ add_executable(1d_advection
 )
 target_link_libraries(1d_advection
     PUBLIC
-        DDC::DDC
+        DDC::core
         GTest::gtest
         GTest::gmock
 
