--- a/tests/multipatch/spline/CMakeLists.txt
+++ b/tests/multipatch/spline/CMakeLists.txt
@@ -12,7 +12,7 @@ add_executable("${test_name_gtest}"
 )
 target_link_libraries("${test_name_gtest}"
 PUBLIC
-        DDC::DDC
+        DDC::core
         GTest::gtest
         GTest::gmock
 
