--- a/.github/workflows/static_analyses.yml
+++ b/.github/workflows/static_analyses.yml
@@ -99,11 +99,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          submodules: true
       - name: Make documenation
         run: |
           # Make docs
-          cmake -DGYSELALIBXX_BUILD_DOCUMENTATION=ON -B build -S .
+          cmake -DGYSELALIBXX_COMPILE_SOURCE=OFF -DGYSELALIBXX_BUILD_DOCUMENTATION=ON -B build -S .
           cmake --build build --target doc
         shell: bash
       - name: Check for new errors
