--- a/.github/workflows/gpu_tests.yml
+++ b/.github/workflows/gpu_tests.yml
@@ -8,6 +8,11 @@ on:
         required: false
         default: main
         type: string
+      is_duplicate:
+        description: "Indicate if the run would be a duplicate"
+        required: false
+        default: false
+        type: boolean
   workflow_call:
     inputs:
       merge_target:
@@ -27,6 +32,7 @@ jobs:
   gpu_tests:
     runs-on: self-hosted
     environment: development
+    if: ${{ (! inputs.is_duplicate) || true }}
     steps:
       - name: Checkout gyselalibxx
         uses: actions/checkout@v4
