--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,7 +40,7 @@ jobs:
       toolchain: ${{ matrix.toolchain }}
       merge_target: ${{ github.event.pull_request.base.sha || github.event.merge_group.base_sha }}
       pr_number: ${{ github.event.pull_request.number }}
-      is_duplicate: needs.pre_job.outputs.should_skip != 'true' && github.event.pull_request.draft == false
+      is_duplicate: ${{ needs.pre_job.outputs.should_skip != 'true' && github.event.pull_request.draft == false }}
 
   gpu_tests:
     name: GPU Test
@@ -50,7 +50,7 @@ jobs:
     with:
       merge_target: ${{ github.event.pull_request.base.sha || github.event.merge_group.base_sha }}
       pr_number: ${{ github.event.pull_request.number }}
-      is_duplicate: needs.pre_job.outputs.should_skip != 'true' && github.event.pull_request.draft == false
+      is_duplicate: ${{ needs.pre_job.outputs.should_skip != 'true' && github.event.pull_request.draft == false }}
 
   set_draft_failing:
     runs-on: ubuntu-latest
