--- a/.github/workflows/cpu_tests.yml
+++ b/.github/workflows/cpu_tests.yml
@@ -30,6 +30,11 @@ on:
         description: "The number of the pull request that triggered the test"
         required: false
         type: number
+      is_duplicate:
+        description: "Indicate if the run would be a duplicate"
+        required: false
+        default: false
+        type: boolean
 
 concurrency:
   group: ${{ github.event_name != 'workflow_dispatch' && format('{0}-{1}-{2}', github.workflow, inputs.pr_number, inputs.toolchain) || github.run_id }}
@@ -44,17 +49,21 @@ jobs:
     name: CPU Test (${{ inputs.toolchain }})
     steps:
       - name: Checkout gyselalibxx
+        if: ${{ (! inputs.is_duplicate) || true }}
         uses: actions/checkout@v4
         with:
           submodules: recursive
       - name: "Filter tests"
+        if: ${{ (! inputs.is_duplicate) || true }}
         uses: ./.github/actions/test_filter
         with:
           base_sha: ${{ inputs.merge_target }}
           trigger_type: ${{ github.event_name }}
       - name: Build code
+        if: ${{ (! inputs.is_duplicate) || true }}
         uses: ./.github/actions/build_code
         with:
           toolchain: toolchains/docker.gyselalibxx_env/${{ inputs.toolchain }}.cmake
       - name: Run tests
+        if: ${{ (! inputs.is_duplicate) || true }}
         uses: ./.github/actions/run_tests
