Add missing compilation flags

--- a/.github/actions/build_code/action.yml
+++ b/.github/actions/build_code/action.yml
@@ -11,6 +11,6 @@ runs:
     - name: Compile code
       run: |
         cmake -DCMAKE_TOOLCHAIN=${{ inputs.toolchain }} -B build -S .
-        cmake --build build
+        cmake --build build --parallel 4
       shell: bash
 
