--- a/.github/actions/run_tests/action.yml
+++ b/.github/actions/run_tests/action.yml
@@ -7,8 +7,10 @@ runs:
       run: |
         ctest -j 2 --timeout 5 --output-junit tests.xml --output-on-failure
       shell: bash
-      working-directory:
-        ./build
+      working-directory: ./build
+      env:
+        OMPI_ALLOW_RUN_AS_ROOT: 1
+          OMPI_ALLOW_RUN_AS_ROOT_CONFIRM: 1
     - name: Publish Test Report
       uses: mikepenz/action-junit-report@v4
       if: success() || failure() # always run even if the previous step fails
